--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
   <head>
+    <base href="/"/>
     <meta charset="utf-8" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
@@ -12,5 +13,7 @@
   </head>
   <body style="font-family: 'Roboto'; ">
     <dp-ambulance-wl-list></dp-ambulance-wl-list>
+    <dp-ambulance-wl-editor></dp-ambulance-wl-editor>
+    <dp-ambulance-wl-app base-path="/ambulance-wl/"></dp-ambulance-wl-app>
   </body>
 </html>
