Added ambulance waiting list API

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,6 @@
   <body style="font-family: 'Roboto'; ">
     <dp-ambulance-wl-list></dp-ambulance-wl-list>
     <dp-ambulance-wl-editor></dp-ambulance-wl-editor>
-    <dp-ambulance-wl-app base-path="/ambulance-wl/"></dp-ambulance-wl-app>
+    <dp-ambulance-wl-app ambulance-id="bobulova" api-base="http://localhost:5001/api" base-path="/ambulance-wl"></dp-ambulance-wl-app>
   </body>
 </html>
