--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
   <head>
-    <base href="/"/>
+    <base href="/" />
     <meta charset="utf-8" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <title>Stencil Component Starter</title>
-
     <script type="module" src="/build/ambulance-ufe.esm.js"></script>
     <script nomodule src="/build/ambulance-ufe.js"></script>
   </head>
-  <body style="font-family: 'Roboto'; ">
-    <dp-ambulance-wl-list></dp-ambulance-wl-list>
-    <dp-ambulance-wl-editor></dp-ambulance-wl-editor>
-    <dp-ambulance-wl-app ambulance-id="bobulova" api-base="http://localhost:5001/api" base-path="/ambulance-wl"></dp-ambulance-wl-app>
+  <body style="font-family: 'Roboto'">
+    <dp-ambulance-wl-app ambulance-id="bobulova" api-base="http://localhost:5001/api" base-path="/ambulance-wl/"></dp-ambulance-wl-app>
   </body>
 </html>
